vm/snapshots/variables-array_components-array_assignment-ArrayAssignmentOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
Array assignment test passed.
----- STDERR -----
