vm/snapshots/variables-array_components-array_defaults-ArrayDefaultsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
Array defaults test passed.
----- STDERR -----
