vm/snapshots/variables-array_components-array_operations-ArrayOperationsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
Array operations test passed.
----- STDERR -----
