vm/snapshots/variables-array_components-compound_assignments-CompoundAssignmentsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
Compound assignments test passed.
----- STDERR -----
