vm/snapshots/variables-array_components-errors-negative_size-NegativeSizeErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NegativeArraySizeException: -1
	at variables.array_components.errors.negative_size.NegativeSizeErrMain.main(NegativeSizeErrMain.java:6)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NegativeArraySizeException: -1
	at variables.array_components.errors.negative_size.NegativeSizeErrMain.main(NegativeSizeErrMain.java:6)
