vm/snapshots/variables-array_components-errors-negative_size_object-NegativeSizeObjectErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NegativeArraySizeException: -1
	at variables.array_components.errors.negative_size_object.NegativeSizeObjectErrMain.main(NegativeSizeObjectErrMain.java:6)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NegativeArraySizeException: -1
	at variables.array_components.errors.negative_size_object.NegativeSizeObjectErrMain.main(NegativeSizeObjectErrMain.java:6)
