vm/snapshots/variables-array_components-errors-null_array_access-NullArrayAccessErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NullPointerException
	at variables.array_components.errors.null_array_access.NullArrayAccessErrMain.main(NullArrayAccessErrMain.java:7)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NullPointerException: Cannot load from int array because "arr" is null
	at variables.array_components.errors.null_array_access.NullArrayAccessErrMain.main(NullArrayAccessErrMain.java:7)
