vm/snapshots/variables-array_components-errors-null_row_access-NullRowAccessErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NullPointerException
	at variables.array_components.errors.null_row_access.NullRowAccessErrMain.main(NullRowAccessErrMain.java:8)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NullPointerException: Cannot load from int array because "jagged[0]" is null
	at variables.array_components.errors.null_row_access.NullRowAccessErrMain.main(NullRowAccessErrMain.java:8)
