vm/snapshots/variables-array_components-errors-out_of_bounds-OutOfBoundsErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.ArrayIndexOutOfBoundsException: Index 5 out of bounds for length 5
	at variables.array_components.errors.out_of_bounds.OutOfBoundsErrMain.main(OutOfBoundsErrMain.java:8)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.ArrayIndexOutOfBoundsException: Index 5 out of bounds for length 5
	at variables.array_components.errors.out_of_bounds.OutOfBoundsErrMain.main(OutOfBoundsErrMain.java:8)
